2004-08-17  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b9)

	* Fixed redirect testing after upload in applet.

2004-08-17  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b8)

	* Fixed duplicate root album in New Album dialog on G2.

2004-08-13  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b7)

	* Fixed cookie handling in HTTPClient (fixes losing G2 sessions).
	* Better detection of G2.
	* 2_5 handles 2.3 protocol.

2004-08-11  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b6)

	* No redirect for embedded applets.

2004-08-11  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b5)

	* AppletMini now imports OsShutdown dynamically, to prevent
	  the illegal signature problems.

2004-08-06  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b4)

	* AppletMini doesn't try to refresh album page when it's in G2 mode.

2004-08-04  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b3)

	* Added support for resizing and moving the crop area.
	* When dropping pics at the end of the list, move to the last item.

2004-08-04  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b2)

	* Fixed bug adding images for first-time users.
	* GR now retries any requests once if the request failed
	  without a protocol error message. This will fix the
	  problems when albums have to be upgraded, and potentially
	  network errors.
	* Instead of stopping the upload on error, GR now lists
	  the errors so far and keeps going.
	* Transformed all \n to \u000A to fix the problems with
	  MessagePattern stripping linefeeds.

2004-07-29  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b1)

	* Fixed double-upload to old versions of Gallery.
	* Fixed not able to select root album in the new album dialog.
	* Stripping HTML tags in slideshow.
	* Hiding mouse pointer in slideshow.

2004-07-20  Pierre-Luc Paour <gallery@paour.com> (1.4)

	* Released.

2004-07-20  Pierre-Luc Paour <gallery@paour.com> (1.4-RC2-b2)

	* When connected to G2, no longer offers to create new album.